# hackathon-2-phase-ii

./: Dockerfile  README.md
.github/workflows/: deploy.yml
todo-app/: .gitignore  BACKEND_COMPLETION_REPORT.md  COMPONENTS_SUMMARY.md  README.md
todo-app/.claude/agents/: component-crafter.md
todo-app/.specify/memory/: constitution.md
todo-app/backend/: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.json  requirements.txt  test_api.sh
todo-app/backend/alembic/: README  env.py
todo-app/backend/alembic/versions/: 001_initial_schema.py
todo-app/backend/src/: __init__.py  config.py  database.py  main.py
todo-app/backend/src/auth/: __init__.py  dependencies.py  password.py  token.py
todo-app/backend/src/models/: __init__.py  todo.py  user.py
todo-app/backend/src/routers/: __init__.py  auth.py  todos.py
todo-app/backend/src/schemas/: __init__.py  auth.py  error.py  todo.py
todo-app/backend/tests/: __init__.py  conftest.py  test_auth.py  test_auth_utils.py  test_models.py  test_todos.py
todo-app/frontend/: .env.local.example  .eslintrc.json  .gitignore  next.config.js  package-lock.json  package.json  vercel.json
todo-app/frontend/.vercel/: project.json
todo-app/frontend/src/app/: globals.css  layout.tsx  page.tsx
todo-app/frontend/src/app/dashboard/: page.tsx
todo-app/frontend/src/components/: Header.tsx  TodoList.tsx
todo-app/frontend/src/contexts/: AuthContext.tsx
todo-app/frontend/src/styles/: todo-components.css
todo-app/frontend/src/types/: index.ts
todo-app/specs/phase-i/: plan.md  spec.md  tasks.md
todo-app/src/: main.py
todo-app/src/cli/: menu.py
todo-app/src/models/: exceptions.py  task.py
todo-app/src/services/: task_service.py
todo-app/tests/: test_integration.py
todo-app/tests/test_cli/: __init__.py  test_menu.py
todo-app/tests/test_models/: test_exceptions.py  test_task.py
todo-app/tests/test_services/: test_task_service.py
(+5 files in other folders)
